--- a/html/ConGaming.html
+++ b/html/ConGaming.html
@@ -10,7 +10,7 @@
     <body>
       <div class="page">
         <br>
-        <header tabindex="0"><h1><img src="../titF/tit.jpeg" alt="title"></h1></header>
+        <header tabindex="0"><h1><img src="../titF/tit.png" alt="title"></h1></header>
         <br>
         <div id="nav-container">
           <div class="bg"></div>
