--- a/html/ConGaming.html
+++ b/html/ConGaming.html
@@ -22,8 +22,8 @@
 
           <div id="nav-content" tabindex="0">
             <ul>
-              <li><a href="html/gameDev.html">Game development</a></li>
-              <li><a href="html/ConGaming.html">Console Gaming</a></li>
+              <li><a href="gameDev.html">Game development</a></li>
+              <li><a href="ConGaming.html">Console Gaming</a></li>
               <li><a href="https://twitchtracker.com/statistics/games">Streaming</a></li>
             </ul>
           </div>
