--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
                 </ul>
               </div>
 
+              <p>In this website you are going to learn about the development of video gaming on handheld consoles, on normal consoles and on pc's. </p>
+              <p>We will also tell you about the statistics of the biggest streaming platform on the world!</p>
+              <p>This website was created by Herolind Hajredini and Amgad Hammash.</p>
+
               <div class="row parent-container"></div>
                 <div class="w100 video-container"> </div>
                 <video autoplay loop muted   width="100%" id="Consoles">
