--- a/html/gameDev.html
+++ b/html/gameDev.html
@@ -8,10 +8,7 @@
 </head>
 
 <body>
-    <div class="page">
-        <br>
-        <header tabindex="0"><h1><img src="../titF/tit.png" alt="title"></h1></header>
-        <br>
+        <a href="../index.html"><header tabindex="0"><h1><img src="../titF/tit.png" alt="title"></h1></header></a>
         <div id="nav-container">
           <div class="bg"></div>
           <div class="button" tabindex="0">
@@ -28,8 +25,13 @@
             </ul>
           </div>
         </div>
-      </div>
 
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
     <h1>How was gaming developed?</h1>
     <p>____________________________________________________________</p>
     <section>
