Bilderformatierung Bootstrap (Ignorieren)

--- a/html/ConGaming.html
+++ b/html/ConGaming.html
@@ -2,6 +2,8 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
             <link rel="stylesheet" href="../css/ConGaming.css">
         <title>Console Gaming</title>
         
@@ -25,6 +27,10 @@
             </ul>
           </div>
         </div>
+
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+
 
         <br>
         <br>
@@ -167,7 +173,6 @@
                     </div>
                   </div>
               </div>
-              <img src="../pics/Timiline-End.jpg" width="10" height="5" alt="Timeline ending">
-    
+
         </section>
 </html>
